@@ -23,10 +23,35 @@ extern void grub_terminfo_init (void);
 extern void grub_keylayouts_init (void);
 extern void grub_boot_init (void);
 
+static inline int
+probe_mem (grub_addr_t addr)
+{
+  volatile grub_uint8_t *ptr = (grub_uint8_t *) (0xa0000000 | addr);
+  grub_uint8_t c = *ptr;
+  *ptr = 0xAA;
+  if (*ptr != 0xAA)
+    return 0;
+  *ptr = 0x55;
+  if (*ptr != 0x55)
+    return 0;
+  *ptr = c;
+  return 1;
+}
+
 void
 grub_machine_init (void)
 {
   grub_addr_t modend;
+
+  if (grub_arch_memsize == 0)
+    {
+      int i;
+      
+      for (i = 27; i >= 0; i--)
+	if (probe_mem (grub_arch_memsize | (1 << i)))
+	  grub_arch_memsize |= (1 << i);
+      grub_arch_memsize++;
+    }
 
   /* FIXME: measure this.  */
   grub_arch_cpuclock = 64000000;
@@ -40,7 +65,6 @@ grub_machine_init (void)
   grub_video_init ();
   grub_bitmap_init ();
   grub_font_init ();
-  grub_gfxterm_init ();
 
   grub_keylayouts_init ();
   grub_at_keyboard_init ();
@@ -49,6 +73,8 @@ grub_machine_init (void)
   grub_serial_init ();
 
   grub_boot_init ();
+
+  grub_gfxterm_init ();
 }
 
 void
